# cclaw

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/cclaw/: cclaw.h  error.h  provider.h  response.h  str.h  tool.h  types.h
src/: main.c  version.h.in
src/core/: cclaw.c  error.c  internal.h  response.c
src/lib/: libenv.h  termbox2.h
src/net/: http.c  http.h
src/provider/: openai.c  openai.h  registry.c
src/tui/: event.h  repl.c  repl.h  tui.c  tui.h
test/: test_error.c
